--- a/ESof 3050 Project/src/program/client/DeleteAccount.fxml
+++ b/ESof 3050 Project/src/program/client/DeleteAccount.fxml
@@ -43,18 +43,18 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Delete Account" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#DeleteAccountButtonPressed" text="Delete Account" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <CheckBox mnemonicParsing="false" text="I am sure I want to delete this account" GridPane.rowIndex="3" />
+      <CheckBox fx:id="DeleteAccountCheckBox" mnemonicParsing="false" text="I am sure I want to delete this account" GridPane.rowIndex="3" />
       <Label text="Account to Delete" GridPane.rowIndex="2">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <ChoiceBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <ChoiceBox fx:id="DeleteAccountChoiceBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
