--- a/ESof 3050 Project/src/program/client/DeleteAccountConfirmation.fxml
+++ b/ESof 3050 Project/src/program/client/DeleteAccountConfirmation.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -19,9 +18,10 @@
     <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Delete Profile">
+      <Label text="Delete Account Confirmation" GridPane.columnSpan="2147483647">
          <font>
             <Font size="24.0" />
          </font>
@@ -41,12 +41,21 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#DeleteProfileSubmitButtonPressed" text="Delete Profile" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#EditCancelButtonPressed" text="Done" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <CheckBox fx:id="DeleteProfileCheckBox" mnemonicParsing="false" text="I am sure I want to delete this profile" GridPane.rowIndex="2" />
+      <Label text="Account Deleted" GridPane.rowIndex="2">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="AccountDeletedTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </TextField>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
