--- a/ESof 3050 Project/src/program/client/DeleteProfileConfirmation.fxml
+++ b/ESof 3050 Project/src/program/client/DeleteProfileConfirmation.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -21,32 +20,26 @@
       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Delete Profile">
+      <Label text="Delete Profile Confirmation" GridPane.columnSpan="2147483647">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Button mnemonicParsing="false" onAction="#EditCancelButtonPressed" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
       <TextField fx:id="EditCardNumberTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <Label text="Card Number of Current Profile" GridPane.rowIndex="1">
+      <Label text="Deleted Profile Card Number" GridPane.rowIndex="1">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#DeleteProfileSubmitButtonPressed" text="Delete Profile" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#TellerCancelButtonPressed" text="Done" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <CheckBox fx:id="DeleteProfileCheckBox" mnemonicParsing="false" text="I am sure I want to delete this profile" GridPane.rowIndex="2" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
