--- a/ESof 3050 Project/src/program/client/TellerSearchResult.fxml
+++ b/ESof 3050 Project/src/program/client/TellerSearchResult.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="src.program.client.BankingClientController">
+<GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="src.program.client.BankingClientController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -22,7 +22,6 @@
     <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
     <RowConstraints vgrow="SOMETIMES" />
-      <RowConstraints vgrow="SOMETIMES" />
       <RowConstraints vgrow="SOMETIMES" />
       <RowConstraints vgrow="SOMETIMES" />
       <RowConstraints vgrow="SOMETIMES" />
@@ -68,47 +67,37 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Label text="First Name" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+      <Label text="Name" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label text="Last Name" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+      <Label text="Email" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label text="Email" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
+      <Label text="SIN" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label text="SIN" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Button mnemonicParsing="false" onAction="#SelectAccountHolderButtonPressed" text="Select Account Holder" GridPane.columnIndex="2" GridPane.rowIndex="7">
+      <Button mnemonicParsing="false" onAction="#SelectAccountHolderButtonPressed" text="Select Account Holder" GridPane.columnIndex="2" GridPane.rowIndex="6">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <TextField fx:id="ResultFirstNameTextField" GridPane.columnIndex="2" GridPane.rowIndex="3">
+      <TextField fx:id="ResultNameTextField" editable="false" GridPane.columnIndex="2" GridPane.rowIndex="3">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="ResultLastNameTextField" GridPane.columnIndex="2" GridPane.rowIndex="4">
+      <TextField fx:id="ResultSinTextField" editable="false" GridPane.columnIndex="2" GridPane.rowIndex="4">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="ResultSinTextField" GridPane.columnIndex="2" GridPane.rowIndex="5">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="ResultEmailTextField" GridPane.columnIndex="2" GridPane.rowIndex="6">
+      <TextField fx:id="ResultEmailTextField" editable="false" GridPane.columnIndex="2" GridPane.rowIndex="5">
          <font>
             <Font size="18.0" />
          </font>
