--- a/ESof 3050 Project/src/program/client/AccountHistory.fxml
+++ b/ESof 3050 Project/src/program/client/AccountHistory.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="src.program.client.BankingClientController">
+<GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="src.program.client.BankingClientController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
@@ -46,14 +46,14 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="AccountHistoryNumberTextField">
+            <TextField fx:id="AccountHistoryNumberTextField" editable="false">
                <font>
                   <Font size="14.0" />
                </font>
             </TextField>
          </children>
       </HBox>
-      <Label text="Account Number:" GridPane.rowIndex="2">
+      <Label text="Transactions:" GridPane.rowIndex="2">
          <font>
             <Font size="18.0" />
          </font>
@@ -73,12 +73,12 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Label text="Receiving Account" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+      <Label text="Transaction Type" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label text="Sending Account" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+      <Label text="Account" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
          <font>
             <Font size="18.0" />
          </font>
