--- a/ESof 3050 Project/src/program/client/AccountHistory.fxml
+++ b/ESof 3050 Project/src/program/client/AccountHistory.fxml
@@ -26,6 +26,7 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <ListView fx:id="AccountHistoryListView" GridPane.rowIndex="3" GridPane.rowSpan="2147483647" />
@@ -58,12 +59,12 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#ViewAccountsButtonPressed" text="Done" GridPane.columnIndex="2" GridPane.rowIndex="7">
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#ViewAccountsButtonPressed" text="Done" GridPane.columnIndex="2" GridPane.rowIndex="8">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Label text="Amount" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
+      <Label text="Amount" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="7">
          <font>
             <Font size="18.0" />
          </font>
@@ -73,12 +74,12 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Label text="Transaction Type" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+      <Label text="Transaction Type" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label text="Account" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+      <Label text="Receiving Account" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
          <font>
             <Font size="18.0" />
          </font>
@@ -88,17 +89,27 @@
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="TransferHistorySenderTextField" GridPane.columnIndex="2" GridPane.rowIndex="4">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </TextField>
       <TextField fx:id="TransferHistoryReceiverTextField" GridPane.columnIndex="2" GridPane.rowIndex="5">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="TransferHistoryAmountTextField" GridPane.columnIndex="2" GridPane.rowIndex="6">
+      <TextField fx:id="TransferHistoryTypeTextField" GridPane.columnIndex="2" GridPane.rowIndex="6">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="TransferHistoryAmountTextField" GridPane.columnIndex="2" GridPane.rowIndex="7">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </TextField>
+      <Label text="Sending Account" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="TransferHistorySenderTextField" GridPane.columnIndex="2" GridPane.rowIndex="4">
          <font>
             <Font size="18.0" />
          </font>
